頁面調整，要去條篩選了

--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -294,10 +294,10 @@
                                    data-bs-title="全選" data-bs-trigger="hover">
                         </th>
                         <th style="width:160px">
-                            @Html.DisplayNameFor(model => model.Name)
+                            姓名
                         </th>
                         <th style="width:120px">
-                            @Html.DisplayNameFor(model => model.EmpCode)
+                            員工編號
                         </th>
                         <th style="width:140px">
                             部門
@@ -306,10 +306,10 @@
                             職位
                         </th>
                         <th style="width:140px">
-                            @Html.DisplayNameFor(model => model.HireDate)
+                           入職日期
                         </th>
                         <th style="width:80px">
-                            @Html.DisplayNameFor(model => model.Status)
+                            在職狀態
                         </th>
                         <th style="width:116px">
 
