--- a/StarProject/Views/Emps/Index.cshtml
+++ b/StarProject/Views/Emps/Index.cshtml
@@ -130,6 +130,12 @@
                                         導覽服務部
                                     </label>
                                 </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="MG" id="dept8">
+                                    <label class="form-check-label" for="dept8">
+                                        導覽服務部
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </li>
