突然就修好了全選刪除錯誤

--- a/StarProject/Views/Events/List.cshtml
+++ b/StarProject/Views/Events/List.cshtml
@@ -253,8 +253,8 @@
         <input id="searchInput" type="text" class="form-control" placeholder="請輸入關鍵字（活動名稱、種類、地點）以搜尋">
         <button type="button" class="text-danger input-group-text btn-outline-delect" id="btnClearKeyword" title="清除輸入">×</button>
 
-        <button type="button" class="input-group-text search" id="btnSearch" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="搜尋" data-bs-trigger="hover">
-            <i class="fa-solid fa-magnifying-glass"></i>
+        <button type="button" class="input-group-text search" id="btnSearch" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="所有活動" data-bs-trigger="hover">
+         所有活動
         </button>
 
         <!-- 進階篩選 -->
