--- a/StarProject/Views/Emps/Edit.cshtml
+++ b/StarProject/Views/Emps/Edit.cshtml
@@ -9,6 +9,35 @@
 
 <div class="row">
     <div class="col-md-6">
+        @if (!ViewData.ModelState.IsValid)
+        {
+            <div class="alert alert-danger">
+                <h5>表單驗證錯誤：</h5>
+                <table class="table table-sm table-bordered">
+                    <thead>
+                        <tr>
+                            <th>欄位</th>
+                            <th>錯誤訊息</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var kvp in ViewData.ModelState)
+                        {
+                            var field = kvp.Key;
+                            var errors = kvp.Value.Errors;
+                            foreach (var error in errors)
+                            {
+                                <tr>
+                                    <td>@field</td>
+                                    <td>@error.ErrorMessage</td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        }
+
         <form asp-action="Edit" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
