--- a/StarProject/Views/CompanyNotifies/Index.cshtml
+++ b/StarProject/Views/CompanyNotifies/Index.cshtml
@@ -182,7 +182,7 @@
 						<h4 class="modal-title fw-bold" id="modelTitle"></h4>
 						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 					</div>
-					<div class="modal-body" id="modelCon"></div>
+					<div class="modal-body px-5" id="modelCon"></div>
 
 					<div class="modal-footer">
 						<a id="modelEditBtn" class="btn btn-edit br20px"><i class="fa-solid fa-pen-to-square"></i>編輯</a>
