--- a/StarProject/Views/News/Create.cshtml
+++ b/StarProject/Views/News/Create.cshtml
@@ -44,6 +44,7 @@
             height: 100%;
             width: auto; /* 保持比例 */
             object-fit: cover; /* 填滿容器裁切 */
+            object-position: center; /* 裁切以圖片中心對齊 */
         }
 
         .card-header{
@@ -84,9 +85,11 @@
                                 <option value="">請選擇</option>
                                 <option value="最新消息">最新消息</option>
                                 <option value="館區動態">館區動態</option>
+                                <option value="展覽公告">展覽公告</option>
                                 <option value="活動資訊">活動資訊</option>
                                 <option value="最新天象">最新天象</option>
                                 <option value="觀測公告">觀測公告</option>
+                                <option value="宇宙探索">宇宙探索</option>
                                 <option value="系統公告">系統公告</option>
                                 <option value="其他消息">其他消息</option>
                             </select>
@@ -94,7 +97,7 @@
                         
                         <div class="form-group mb-2">
                             <label asp-for="PublishDate" class="control-label fw-bold fs-5"></label><span asp-validation-for="PublishDate" class="text-danger ms-3"></span>
-                            <input asp-for="PublishDate" class="form-control" />
+                            <input asp-for="PublishDate" class="form-control" min="@DateTime.Now.ToString("yyyy-MM-dd HH:mm")" />
                         </div>
                         
                         <div class="form-group mb-2">
@@ -108,11 +111,11 @@
             <!-- 右側：圖片區 -->
             <div class="col-lg-6">
                 <div class="card h-100">
-                    <div class="card-header fw-bold fs-4"><strong>公告圖片</strong></div>
+                    <div class="card-header fw-bold fs-4"><strong>公告封面</strong></div>
                     <div class="card-body d-flex flex-column">
                         <!-- 多圖上傳 -->
                         <div class="mb-3">
-                            <label class="form-label fw-bold fs-5">上傳圖片</label>
+                            <label class="form-label fw-bold fs-5">上傳圖片</label><small class="text-muted ms-3">可選多張上傳</small>
                             <input type="file" class="form-control" multiple id="imageFilesInput" name="ImageFiles" />
                         </div>
 
@@ -224,7 +227,7 @@
                 // Carousel item
                 const item = $(`
                     <div class="carousel-item ${index===0?'active':''}">
-                        <img src="${url}" class="d-block w-100 h-100" style="object-fit:cover;">
+                        <img src="${url}" class="d-block w-100" style="height:500px; object-fit:cover;object-position: center;">
                     </div>
                 `);
                 carouselInner.append(item);
