--- a/StarProject/Views/News/Edit.cshtml
+++ b/StarProject/Views/News/Edit.cshtml
@@ -112,11 +112,11 @@
             <!-- 右側：圖片區 -->
             <div class="col-lg-6">
                 <div class="card h-100">
-                    <div class="card-header fw-bold fs-4"><strong>公告圖片</strong></div>
+                    <div class="card-header fw-bold fs-4"><strong>公告封面</strong></div>
                     <div class="card-body d-flex flex-column">
                         <!-- 多圖上傳 -->
                         <div class="mb-3">
-                            <label class="form-label fw-bold fs-5">上傳圖片</label>
+                            <label class="form-label fw-bold fs-5">上傳圖片</label><small class="text-muted ms-3">可選多張上傳</small>
                             <input type="file" class="form-control" multiple id="imageFilesInput" name="ImageFiles" />
                         </div>
 
@@ -134,7 +134,7 @@
                                     @for (int i = 0; i < Model.Images.Count; i++)
                                     {
                                         <div class="carousel-item @(i == 0 ? "active" : "")">
-                                            <img src="@Model.Images[i]" class="d-block w-100 h-100" style="object-fit:cover;">
+                                            <img src="@Model.Images[i]" class="d-block w-100" style="height:500px; object-fit:cover;object-position: center;">
                                         </div>
                                     }
                                 </div>
@@ -252,7 +252,7 @@
                     imagePreviewList.append(li);
 
                     const citem = $(`<div class="carousel-item${count==0?' active':''}" data-type="old" data-id="${img.id}">
-                                        <img src="${img.url}" class="d-block w-100 h-100" style="object-fit:cover;">
+                                        <img src="${img.url}" class="d-block w-100" style="height:500px; object-fit:cover;object-position: center;">
                                      </div>`);
                     carouselInner.append(citem);
                     carouselIndicators.append(`<button type="button" data-bs-target="#carouselExampleIndicators"
@@ -279,7 +279,7 @@
                     imagePreviewList.append(li);
 
                     const citem = $(`<div class="carousel-item${count==0?' active':''}" data-type="new" data-index="${item.index}">
-                                        <img src="${obj.previewUrl}" class="d-block w-100 h-100" style="object-fit:cover;">
+                                        <img src="${obj.previewUrl}" class="d-block w-100" style="height:500px; object-fit:cover;object-position: center;">
                                      </div>`);
                     carouselInner.append(citem);
                     carouselIndicators.append(`<button type="button" data-bs-target="#carouselExampleIndicators"
